finish cinema interface
